# rosdevday_cloud_filtering

./: CMakeLists.txt  README.md  package.xml
config/: absolem_filters.yaml  absolem_real_filters.yaml  husky_filters.yaml  husky_simple.yaml  husky_tighter.yaml  lily_filters.yaml  marmotte_filters.yaml  marv_filters.yaml  rviz.rviz  spot_filters.yaml  x500_filters.yaml
data/: .gitignore  absolem-real.params  absolem-teleop.bag  absolem.params  download_data  husky-teleop.bag  husky.params  lily-teleop.bag  lily.params  marmotte-teleop.bag  marmotte.params  marv-teleop.bag  marv.params  spot-teleop.bag  spot.params  x500-teleop.bag  x500.params
launch/: absolem_filter.launch  absolem_gazebo.launch  absolem_real_filter.launch  common.launch  gazebo.launch  husky_filter.launch  husky_simple.launch  husky_tighter.launch  lily_filter.launch  lily_gazebo.launch  marmotte_filter.launch  marmotte_gazebo.launch  marv_filter.launch  marv_gazebo.launch  spot.launch  spot_filter.launch  spot_gazebo.launch  x500_filter.launch  x500_gazebo.launch
nodes/: odom_frame_pub
scripts/: gui  ign  xvfb-run
